--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,40 +1,49 @@
 ---
-const personalImageAlt = "Miguel Ángel"
+const personalImageAlt = "Cristopher solis"
 import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import SocialPill from "@/components/SocialPill.astro"
 ---
 
-<div class="max-w-xl">
-  <div class="flex gap-4 mb-4">
+<div class="max-w-3xl flex flex-wrap md:flex-nowrap">
+ 
+  <div class=" w-full lg:w-1/4 md:w-3/6  flex justify-center items-center ">
     <img
-      class="rounded-full shadow-lg size-16"
+      class="rounded-full   md:justify-center shadow-lg size-44"
       src="/midudev.webp"
       alt={personalImageAlt}
     />
-    <a
-      href="https://linkedin.com/in/midudev"
-      target="_blank"
-      rel="noopener"
-      class="flex items-center transition md:justify-center md:hover:scale-105"
-    >
-      <Badge>Disponible para trabajar</Badge>
-    </a>
+  
   </div>
-  <h1
-    class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
+
+  <div class="w-full lg:w-3/4 p-3 ">
+    <h1
+    class="text-4xl font-bold tracking-tight text-gray-800 sm:text-6xl dark:text-white"
   >
-    Hey, soy midudev
+    Hola, soy cristopher
   </h1>
+
+
+  <a
+  href="https://github.com/cristopher003"
+  target="_blank"
+  rel="noopener"
+  class=" transition md:justify-center md:hover:scale-105"
+>
+  <Badge>Disponible para trabajar</Badge>
+</a>
+
+
   <p
-    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+    class="mt-3 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
     +15 años de experiencia. <strong
       >Ingeniero de Software y Creador de Contenido sobre Programación</strong
     > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
     únicas.
   </p>
+
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:miduga@gmail.com">
       <MailIcon class="size-4" />
@@ -45,4 +54,8 @@ import SocialPill from "@/components/SocialPill.astro"
       LinkedIn
     </SocialPill>
   </nav>
+  
+</div>
+
+
 </div>
