--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,9 @@ import ProfileCheck from "@/components/icons/ProfileCheck.astro"
 import Projects from "@/components/Projects.astro"
 import SectionContainer from "@/components/SectionContainer.astro"
 import Hero from "@/components/Hero.astro"
+import  TechStack from "@/components/TechStack.astro";
+import  ToolStack from "@/components/ToolStack.astro";
+
 ---
 
 <Layout
@@ -16,12 +19,35 @@ import Hero from "@/components/Hero.astro"
   description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
 >
   <main class="px-4">
-    <SectionContainer class="py-16 md:py-36">
+    <SectionContainer class="py-16 md:py-20">
       <Hero>
       </slot>
     </Hero>
     </SectionContainer>
     <div class="space-y-24">
+
+      <SectionContainer id="skills">
+        <h2
+        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+      >
+        <Briefcase class="size-8" />
+        Habilidades profecionales
+      </h2>
+        <TechStack></TechStack>
+      </SectionContainer>
+
+
+      <SectionContainer id="herramientas">
+        <h2
+        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+      >
+        <Briefcase class="size-8" />
+        Herramientas
+      </h2>
+        <ToolStack></ToolStack>
+      </SectionContainer>
+
+      
     <SectionContainer id="experiencia">
       <h2
         class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
