--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -1,7 +1,14 @@
 ---
 import SocialPill from "@/components/SocialPill.astro";
-import JavaScript from "@/components/icons/JavaScript.astro";
-import Node from "@/components/icons/Node.astro";
+import JavaScript from "@/components/icons/tech/JavaScript.astro";
+import Laravel from "@/components/icons/tech/Laravel.astro";
+
+import Html from "@/components/icons/tech/Html.astro";
+import Mongo from "@/components/icons/tech/Mongo.astro";
+import Php from "@/components/icons/tech/Php.astro";
+import Css from "@/components/icons/tech/Css.astro";
+import TypeScript from "@/components/icons/tech/TypeScript.astro";
+import Nest from "@/components/icons/tech/Nest.astro";
 ---
 
 <section class="text-white">
@@ -18,7 +25,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <Node
+                <Html
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -26,7 +33,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <JavaScript
+                <Css
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -34,7 +41,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <Node
+                <Mongo
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -42,7 +49,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <JavaScript
+                <Php
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -50,8 +57,23 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <Node
+                <Laravel
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                />
+            </SocialPill>
+
+            <SocialPill
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+            >
+                <TypeScript
+                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                />
+            </SocialPill>
+            <SocialPill
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+            >
+                <Nest
+                    class="tech-icon-images p-3 size-28 inline-block text-gray-400"
                 />
             </SocialPill>
         </div>
