--- a/src/components/ToolStack.astro
+++ b/src/components/ToolStack.astro
@@ -1,7 +1,10 @@
 ---
 import SocialPill from "@/components/SocialPill.astro";
-import JavaScript from "@/components/icons/JavaScript.astro";
-import Node from "@/components/icons/Node.astro";
+
+import Docker from "@/components/icons/tools/Docker.astro";
+import Postman from "@/components/icons/tools/Postman.astro";
+import Slack from "@/components/icons/tools/Slack.astro";
+import Visual from "@/components/icons/tools/Visual.astro";
 ---
 
 <section class="text-white">
@@ -10,7 +13,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <JavaScript
+                <Docker
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -18,7 +21,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <Node
+                <Postman
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -26,7 +29,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <JavaScript
+                <Slack
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
@@ -34,7 +37,7 @@ import Node from "@/components/icons/Node.astro";
             <SocialPill
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <Node
+                <Visual
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
