--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,5 @@
 ---
-import GitHub from "./icons/GitHub.astro"
+import GitHub from "./icons/tech/GitHub.astro"
 import NextJS from "./icons/NextJS.astro"
 import Tailwind from "./icons/Tailwind.astro"
 import Link from "./icons/Link.astro"
