--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,19 +2,32 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
-    date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    date: "Septiembre 2022 - abril 2024",
+    title: "Desarrollador de software",
+    company: "Funiber",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "Desarrollo de aplicaciones web y microservicios utilizando el framework PHP Laravel, integrando soluciones de JavaScript como React y Angular para optimizar la comunicación entre servicios y mejorar la interactividad en la interfaz de usuario.",
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    date: "Octubre 2021 - Agosto 2022",
+    title: "Desarrollador Web",
+    company: "Grupo link",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Desarrollo de soluciones web robustas utilizando Symfony como framework PHP, integrado con frameworks de JavaScript",
+  },
+  {
+    date: "Abril 2021 - julio 2021",
+    title: "Diseñador frontend",
+    company: "ASAP BUSINESS S.A.",
+    description:
+      "Diseño de y progamacion de paginas web haciendo uso del CMS wordpress y plugins como elementor.",
+  },
+  {
+    date: "2018 - 2020",
+    title: "Programador Junior",
+    company: "Development Solutions",
+    description:
+      "Desarrollo de aplicaciones web en java EE, Hibernate y framework JSF (Primefaces en particular).",
   },
 ]
 ---
