--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -6,27 +6,23 @@
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
-    <p>
-      Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
-      >.
-    </p>
 
-    <p>
-      Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
-    </p>
-
-    <p>
+    <!-- <p>
       Como creador de contenido, <strong
         >cuento con el canal de habla hispana más visto del mundo en la
         categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
       >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
       acceso a contenido de calidad.
+    </p> -->
+
+    <p>
+     Desarrollador apasionado con amplia experiencia en el ámbito del desarrollo web, 
+    especializado en la creación de soluciones robustas y eficientes.<strong> Poseo habilidades 
+    sólidas en lenguajes de programación como Java y JavaScript</strong>, lo que me permite abordar 
+    proyectos complejos con eficacia. Mi enfoque integral abarca tanto el backend como el frontend,
+    garantizando una experiencia de usuario fluida y un rendimiento óptimo.<strong> Comprometido con las
+      mejores prácticas de desarrollo</strong>, me esfuerzo por mantenerme actualizado con las últimas
+      tecnologías y tendencias del sector para ofrecer soluciones innovadoras y de alta calidad
     </p>
   </div>
 
