--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,10 +38,9 @@ import SocialPill from "@/components/SocialPill.astro"
   <p
     class="mt-3 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
-    únicas.
+    +4 años de experiencia. <strong
+      >Ingeniero en Sistemas Computacionales y apasionado de la programación</strong
+    > de Guayaquil, Ecuador 🇪c. Especializado en el desarrollo de aplicaciones.
   </p>
 
   <nav class="flex flex-wrap gap-4 mt-8">
