--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import SocialPill from "@/components/SocialPill.astro"
   <div class=" w-full lg:w-2/6 md:w-3/6  flex justify-center items-center ">
     <img
       class="rounded-full   md:justify-center shadow-lg size-44"
-      src="/portafolio/midudev.webp"
+      src="/portafolio/foto.webp"
       alt={personalImageAlt}
     />
   
