--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -14,15 +14,15 @@ import Nest from "@/components/icons/tech/Nest.astro";
 <section class="text-white">
     <div class="mx-auto max-w-screen-xl py-4 sm:px-6 sm:py-4 lg:px-8 lg:py-4">
         <div class="grid grid-cols-2 gap-2 md:grid-cols-4 lg:grid-cols-4">
-            <SocialPill
+            <SocialPill title="JavaScript"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
-                <JavaScript
+                <JavaScript title="JavaScript"
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
 
-            <SocialPill
+            <SocialPill title="Html"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Html
@@ -30,7 +30,7 @@ import Nest from "@/components/icons/tech/Nest.astro";
                 />
             </SocialPill>
 
-            <SocialPill
+            <SocialPill title="Css"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Css
@@ -38,7 +38,7 @@ import Nest from "@/components/icons/tech/Nest.astro";
                 />
             </SocialPill>
 
-            <SocialPill
+            <SocialPill    title="Mongo"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Mongo
@@ -46,7 +46,7 @@ import Nest from "@/components/icons/tech/Nest.astro";
                 />
             </SocialPill>
 
-            <SocialPill
+            <SocialPill  title="Php"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Php
@@ -54,7 +54,7 @@ import Nest from "@/components/icons/tech/Nest.astro";
                 />
             </SocialPill>
 
-            <SocialPill
+            <SocialPill title="Laravel"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Laravel
@@ -62,14 +62,14 @@ import Nest from "@/components/icons/tech/Nest.astro";
                 />
             </SocialPill>
 
-            <SocialPill
+            <SocialPill title="TypeScript"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <TypeScript
                     class="tech-icon-images p-3 size-32 inline-block text-gray-400"
                 />
             </SocialPill>
-            <SocialPill
+            <SocialPill title="Nest"
                 class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Nest
