--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,8 @@ import  ToolStack from "@/components/ToolStack.astro";
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Porfolio de Cristopher - Desarrollador y Programador web"
+  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web"
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-20">
