--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -15,65 +15,65 @@ import Nest from "@/components/icons/tech/Nest.astro";
     <div class="mx-auto max-w-screen-xl py-4 sm:px-6 sm:py-4 lg:px-8 lg:py-4">
         <div class="grid grid-cols-2 gap-2 md:grid-cols-4 lg:grid-cols-4">
             <SocialPill title="JavaScript"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <JavaScript title="JavaScript"
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
 
             <SocialPill title="Html"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Html
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
 
             <SocialPill title="Css"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Css
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
 
             <SocialPill    title="Mongo"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Mongo
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
 
             <SocialPill  title="Php"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Php
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
 
             <SocialPill title="Laravel"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Laravel
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
 
             <SocialPill title="TypeScript"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <TypeScript
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full  inline-block text-gray-400"
                 />
             </SocialPill>
             <SocialPill title="Nest"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Nest
-                    class="tech-icon-images p-3 size-28 inline-block text-gray-400"
+                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
                 />
             </SocialPill>
         </div>
