--- a/src/components/icons/tech/Nest.astro
+++ b/src/components/icons/tech/Nest.astro
@@ -1,6 +1,8 @@
 <svg
 {...Astro.props}
     stroke-width="1"
+        width="6"
+    height="4"
     xmlns="http://www.w3.org/2000/svg"
     width="1.01em"
     height="1em"
