--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -9,107 +9,140 @@ import Php from "@/components/icons/tech/Php.astro";
 import Css from "@/components/icons/tech/Css.astro";
 import TypeScript from "@/components/icons/tech/TypeScript.astro";
 import Nest from "@/components/icons/tech/Nest.astro";
+import Angular from "./icons/tech/Angular.astro";
+import Ionic from "./icons/tech/Ionic.astro";
 ---
 
 <section class="text-white">
-    <div class="mx-auto max-w-screen-xl py-4 sm:px-6 sm:py-4 lg:px-8 lg:py-4">
-        <div class="grid grid-cols-2 gap-2 md:grid-cols-4 lg:grid-cols-4">
-            <SocialPill title="JavaScript"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <JavaScript title="JavaScript"
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
+  <div class="mx-auto max-w-screen-xl py-4 sm:px-6 sm:py-4 lg:px-8 lg:py-4">
+    <div class="grid grid-cols-2 gap-2 md:grid-cols-4 lg:grid-cols-4">
+      <SocialPill
+        title="JavaScript"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <JavaScript
+          title="JavaScript"
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
 
-            <SocialPill title="Html"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <Html
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
+      <SocialPill
+        title="Html"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <Html
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
 
-            <SocialPill title="Css"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <Css
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
+      <SocialPill
+        title="Css"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <Css
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
 
-            <SocialPill    title="Mongo"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <Mongo
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
+      <SocialPill
+        title="Mongo"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <Mongo
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
 
-            <SocialPill  title="Php"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <Php
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
+      <SocialPill
+        title="Php"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <Php
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
 
-            <SocialPill title="Laravel"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <Laravel
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
+      <SocialPill
+        title="Laravel"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <Laravel
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
 
-            <SocialPill title="TypeScript"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <TypeScript
-                    class="tech-icon-images p-3 h-full w-full  inline-block text-gray-400"
-                />
-            </SocialPill>
-            <SocialPill title="Nest"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-            >
-                <Nest
-                    class="tech-icon-images p-3 h-full w-full inline-block text-gray-400"
-                />
-            </SocialPill>
-        </div>
+      <SocialPill
+        title="TypeScript"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <TypeScript
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
+      <SocialPill
+        title="Nest"
+        class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+      >
+        <Nest
+          class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+        />
+      </SocialPill>
+
+
     </div>
+    <div class="md:col-span-2 flex justify-center">
+        <SocialPill
+          title="Angular"
+          class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+        >
+          <Angular
+            viewBox="0 0 50 50"
+            class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+          />
+        </SocialPill>
+  
+        <SocialPill
+          title="Ionoc"
+          class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+        >
+          <Ionic
+            class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+          />
+        </SocialPill>
+        </div>
+  </div>
 </section>
 
 <style>
+  .tech-icons {
+    border: 1.7px solid rgba(67, 46, 78, 0.637) !important;
+    border-radius: 5px !important;
+    box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
+    display: table !important;
+    font-size: 4.5em !important;
+    margin: 10px !important;
+    opacity: 0.93 !important;
+    overflow: hidden !important;
+    text-align: center !important;
+    transition: all 0.4s ease 0s !important;
+    vertical-align: middle !important;
+  }
+
+  @media (max-width: 767px) {
     .tech-icons {
-        border: 1.7px solid rgba(67, 46, 78, 0.637) !important;
-        border-radius: 5px !important;
-        box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
-        display: table !important;
-        font-size: 4.5em !important;
-        margin: 10px !important;
-        opacity: 0.93 !important;
-        overflow: hidden !important;
-        text-align: center !important;
-        transition: all 0.4s ease 0s !important;
-        vertical-align: middle !important;
+      margin: 10px !important;
     }
+  }
 
-    @media (max-width: 767px) {
-        .tech-icons {
-            margin: 10px !important;
-        }
-    }
+  .tech-icons:hover {
+    border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+    overflow: hidden !important;
+    -webkit-transform: scale(1.05) !important;
+    transform: scale(1.05) !important;
+    background: rgba(171, 117, 193, 0.883) !important;
+  }
 
-    .tech-icons:hover {
-        border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
-        overflow: hidden !important;
-        -webkit-transform: scale(1.05) !important;
-        transform: scale(1.05) !important;
-        background: rgba(171, 117, 193, 0.883) !important;
-    }
-
-    .tech-icon-images:hover {
-        color: aliceblue;
-    }
+  .tech-icon-images:hover {
+    color: aliceblue;
+  }
 </style>
