--- a/src/components/ToolStack.astro
+++ b/src/components/ToolStack.astro
@@ -11,36 +11,37 @@ import Visual from "@/components/icons/tools/Visual.astro";
     <div class="mx-auto max-w-screen-xl py-4 sm:px-6 sm:py-4 lg:px-8 lg:py-4">
         <div class="grid grid-cols-2 gap-2 md:grid-cols-4 lg:grid-cols-4">
             <SocialPill title="Docker"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl  transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Docker
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3  h-full w-full inline-block text-gray-400 group-hover:text-white "
                 />
             </SocialPill>
 
             <SocialPill    title="Postman"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl  transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Postman
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 size-32 inline-block text-gray-400 group-hover:text-white "
                 />
             </SocialPill>
 
             <SocialPill title="Slack"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Slack
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 size-32 inline-block text-gray-400 group-hover:text-white "
                 />
             </SocialPill>
 
             <SocialPill title="Visual"
-                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition hover:border-pink-500/10 hover:shadow-pink-500/10"
+                class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
             >
                 <Visual
-                    class="tech-icon-images p-3 size-32 inline-block text-gray-400"
+                    class="tech-icon-images p-3 size-32 inline-block text-gray-400 group-hover:text-white "
                 />
             </SocialPill>
+            
         </div>
     </div>
 </section>
