--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -88,29 +88,30 @@ import Ionic from "./icons/tech/Ionic.astro";
         />
       </SocialPill>
 
+      <div  class="hidden lg:block md:block"></div>
+      <SocialPill
+      title="Angular"
+      class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+    >
+      <Angular
+        viewBox="0 0 50 50"
+        class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+      />
+    </SocialPill>
+
+    <SocialPill
+      title="Ionoc"
+      class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
+    >
+      <Ionic
+        class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
+      />
+    </SocialPill>
 
     </div>
-    <div class="md:col-span-2 flex justify-center">
-        <SocialPill
-          title="Angular"
-          class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-        >
-          <Angular
-            viewBox="0 0 50 50"
-            class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
-          />
-        </SocialPill>
-  
-        <SocialPill
-          title="Ionoc"
-          class="tech-icons block rounded-xl border border-gray-800 shadow-xl transition group hover:border-pink-500/10 hover:shadow-pink-500/10"
-        >
-          <Ionic
-            class="tech-icon-images p-3 h-full w-full inline-block text-gray-400 group-hover:text-white"
-          />
-        </SocialPill>
-        </div>
   </div>
+
+
 </section>
 
 <style>
