--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -44,11 +44,11 @@ import SocialPill from "@/components/SocialPill.astro"
   </p>
 
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:miduga@gmail.com">
+    <SocialPill href="mailto:cristophersolis@hotmail.com">
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://linkedin.com/in/midudev">
+    <SocialPill href="https://github.com/cristopher003">
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
