--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,22 +5,22 @@ const navItems = [
   {
     title: "Experiencia",
     label: "experiencia",
-    url: "/#experiencia",
+    url: "/portafolio/#experiencia",
   },
   {
     title: "Proyectos",
     label: "proyectos",
-    url: "/#proyectos",
+    url: "/portafolio/#proyectos",
   },
   {
     title: "Sobre mí",
     label: "sobre-mi",
-    url: "/#sobre-mi",
+    url: "/portafolio/#sobre-mi",
   },
   {
     title: "Contacto",
     label: "contacto",
-    url: "mailto:miduga@gmail.com",
+    url: "mailto:cristophersolis@hotmail.com",
   },
 ]
 ---
